# memory-lifeboat

./: .gitignore  Cargo.toml  LICENSE 2  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SECURITY.md
docs/en/: MIGRATION.md
docs/ja/: MIGRATION.md
fixtures/synthetic/: bookmarks.html
schemas/v1/: memory.schema.json
scripts/: watch-audit.sh
src/: archive.rs  bookmarks.rs  crypto.rs  main.rs  report.rs  store.rs  types.rs
