[package]
name = "lifeboat"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A local-first lifeboat for preserving AI product memories and browser context."

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.41", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
tempfile = "3.20.0"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing", "serde"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v5", "v7", "serde"] }
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
